<resources>
    <string name="app_name">NeuroBytes Network Explorer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Settings / General -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_graph_speed">Graph Speed</string>
    <string-array name="pref_list_graph_speed_titles">
        <item>Fast</item>
        <item>Medium</item>
        <item>Slow</item>
    </string-array>
    <string-array name="pref_list_graph_speed_values">
        <item>2</item> <!-- adjust as needed to sensible values for graphing library -->
        <item>1</item>
        <item>0</item>
    </string-array>

    <string name="pref_title_color_scheme">Color Scheme</string>
    <string-array name="pref_list_color_scheme_titles">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="pref_list_color_scheme_values">
        <item>0</item> <!-- white background -->
        <item>1</item> <!-- dark background -->
    </string-array>

    <!-- Settings / Data Logger -->
    <string name="pref_header_data_logger">Data Logger</string>

    <string name="pref_title_use_drive">File Storage Location</string>
    <string-array name="pref_list_use_drive_titles">
        <item>Local Device</item>
        <item>Google Drive</item>
    </string-array>
    <string-array name="pref_list_use_drive_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="pref_title_file_location_local">Local Directory</string>
    <string name="pref_file_location_local_example">Documents/NeuroBytes/</string>

    <string name="pref_title_file_location_drive">Google Drive Directory</string>
    <string name="pref_file_location_drive_example">My Drive/NeuroBytes</string>

    <string name="pref_title_file_name_prefix">File Name Prefix</string>
    <string name="pref_file_name_prefix_example">NeuroBytes_Plot_</string>

    <string name="pref_title_data_log_size">Maximum File Size (MB)</string>
    <string name="pref_file_data_log_size_example">1.0</string>

    <!-- Settings / Firmware -->
    <string name="pref_header_firmware">Firmware</string>

    <string name="pref_title_auto_firmware_nid">Automatically check for NID updates</string>

    <string name="pref_title_auto_firmware_neurobytes">Automatically check for NeuroBytes updates</string>

    <string name="pref_title_allow_firmware_location_changes">Allow firmware source location changes</string>

    <string name="pref_title_nid_firmware_location">NID firmware location</string>
    <string name="pref_nid_firmware_location_example">https://github.com/NeuroTinker/NeuroBytes_NID/tree/master/FIRMWARE/src</string>

    <string name="pref_title_interneuron_firmware_location">Interneuron firmware location</string>
    <string name="pref_interneuron_firmware_location_example">https://github.com/NeuroTinker/NeuroBytes_Interneuron/tree/master/FIRMWARE/bin</string>

    <string name="pref_title_pressure_sensory_neuron_firmware_location">Pressure Sensory Neuron firmware location</string>
    <string name="pref_pressure_sensory_neuron_firmware_location_example">https://github.com/NeuroTinker/NeuroBytes_Force_Sensor/tree/master/FIRMWARE/bin</string>

    <string name="pref_title_motor_neuron_firmware_location">Motor Neuron firmware location</string>
    <string name="pref_motor_neuron_firmware_location_example">https://github.com/NeuroTinker/NeuroBytes_Motor_Neuron/tree/master/FIRMWARE/bin</string>

    <string name="pref_title_rod_photoreceptor_firmware_location">Rod Photoreceptor firmware location</string>
    <string name="pref_rod_photoreceptor_firmware_location_example">https://github.com/NeuroTinker/NeuroBytes_Photoreceptor/tree/master/FIRMWARE/bin</string>

    <string name="pref_title_tonic_neuron_firmware_location">Tonic Neuron firmware location</string>
    <string name="pref_tonic_neuron_firmware_location_example">https://github.com/NeuroTinker/NeuroBytes_Tonic_Neuron/tree/master/FIRMWARE/bin</string>

    <string name="pref_title_touch_sensory_neuron_firmware_location">Touch Sensory Neuron firmware location</string>
    <string name="pref_touch_sensory_neuron_firmware_location_example">https://github.com/NeuroTinker/NeuroBytes_Touch_Sensor/tree/master/FIRMWARE/bin</string>



    <!-- Example General settings -->

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>test</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
