<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_list_use_drive_titles"
        android:entryValues="@array/pref_list_use_drive_values"
        android:key="use_drive"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_use_drive"/>
    <EditTextPreference
        android:defaultValue="@string/pref_file_location_local_example"
        android:inputType="textNoSuggestions"
        android:key="local_file_location"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_file_location_local" />
    <EditTextPreference
        android:defaultValue="@string/pref_file_location_drive_example"
        android:inputType="textNoSuggestions"
        android:key="drive_file_location"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_file_location_drive" />
    <EditTextPreference
        android:defaultValue="@string/pref_file_name_prefix_example"
        android:inputType="textNoSuggestions"
        android:key="file_name_prefix"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_file_name_prefix" />
    <EditTextPreference
        android:defaultValue="@string/pref_file_data_log_size_example"
        android:inputType="text|numberDecimal"
        android:key="data_log_size"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_data_log_size" />
</PreferenceScreen>
